static/css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'PT Sans', sans-serif;
}

body {
  margin: .5em;
  padding-top: 45px;
  padding-bottom: 1em;
  min-height: 97vh;
  position: relative;
}

.mono {
  font-family: monospace;
}

.logo {
  height: 1em;
  margin-bottom: -.15em;
  border: none;
}

.huge {
  font-size: 4em;
}

p {
  margin-bottom: .3em;
  max-width: 600px;
}

footer {
  position: absolute;
  bottom: 0;
  color: #666;
}

@media all and (min-width: 1000px) {
  .content {
    position: absolute;
    top: 60px;
    right: 0;
    max-width: 600px;
  }
  .brand {
    position: fixed;
    top: 53px;
    left: .5em;
  }
  footer {
    position: fixed;
    bottom: .7em;
    left: .5em;
  }
}

a {
  color: #008499;
  text-decoration: none;
  cursor: hand;
  cursor: pointer;
}

a:hover {
  color: #3baec4;
}

button, .button {
  background-color: #ddd;
  border: none;
  color: #333;
  padding: .3em .3em;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  cursor: pointer;
  margin-top: .2em;
  border-radius: 5px;
  font-size: 1em;
  margin-bottom: .5em;
  outline: none;
}

button:hover, button:disabled, .button:hover {
  background-color: #ccc;
}

.mb {
  margin-bottom: 3em;
}

.mt {
  margin-top: 1em;
}

.hidden {
  display: none;
  visibility: hidden;
  width: 0;
  height: 0;
}

.inline {
  display: inline;
}

ol {
  counter-reset: item;
}

li {
  margin-left: 1.3em;
  display: block;
}

ul.docs, ol.docs {
  max-width: 60%;
}

ol li:before {
  content: counters(item, ".") " ";
  counter-increment: item
}

img {
  max-width: 600px;
  border: 1px solid #ddd;
}

.lg {
  font-size: 1.5em;
}

.ra {
  text-align: right;
}

div.center {
  text-align: center;
}

table.center {
  margin: auto;
}

/* nav */

nav {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  width: 100%;
  height: 45px;
  vertical-align: middle;
  /*white-space      : nowrap;*/
  background-color: #f0f0f0;
  border-bottom: 1px solid #ddd;
  z-index: 100050;
}

nav ul {
  list-style-type: none;
  overflow: hidden;
  padding: 0;
  margin: 0;
  width: auto;
}

.topnav {
  height: 45px;
  transition: height .2s;
}

nav ul li {
  display: inline;
  margin-top: 6px;
  margin-left: 0 !important;
  height: 28px;
}

nav ul li a {
  text-align: center;
  text-decoration: none;
  width: 100%;
  height: 100%;
  padding: 3px 10px;
  display: block;
  cursor: pointer;
  cursor: hand;
  color: #444;
}

.pointer {
  cursor: pointer;
  cursor: hand;
}

nav ul li div {
  display: inline-block;
  white-space: nowrap;
  color: #444;
  top: 6px;
  font-size: 24px;
  padding-left: .5em;
  position: absolute;
}

nav ul li:not(:first-child) {
  text-decoration: none;
  display: inline-block;
  background-color: #ddd;
  border-radius: 4px;
  float: right;
  margin-top: 8px;
  margin-right: .3em;
  color: #444;
}

nav a:visited, nav a:hover {
  color: #444;
}

nav ul li:hover:not(:first-child) {
  background-color: #bbb;
}

/* dash */

.flex-container {
  display: flex;
  width: 100%;
  flex-wrap: wrap;
  justify-content: space-between;
}

.event {
  min-width: 10em;
  /*width: 100%;*/
  text-align: center;
  background: #ddd;
  margin: .3em;
  border-radius: 10px;
}

.event:hover {
  background: #ccc;
}

.event a {
  color: #222;
  display: block;
  width: 100%;
  padding: .3em;
}

/* forms */

label {
  display: block;
  cursor: hand;
  cursor: pointer;
}

#config-events {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

#config-events label {
  padding: .3em;
  border: 1px solid #ddd;
}

td input[type=number], td input[type=text] {
  width: 100%;
}

input[type=number] {
  width: 6em;
  -moz-appearance: textfield;
}

input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

textarea {
  width: 20em;
  height: 15em;
}

input.ng-invalid {
  border: 2px solid red;
}

input.yellow {
  border: 2px solid orange;
}

/* tables */

table {
  border-collapse: collapse;
}

div.table {
  overflow-x: auto;
}

th, td {
  border: 1px solid #000;
  padding: .2em;
}

.bb {
  border-bottom: 4px solid #000;
}

.blank, table.blank th, table.blank td {
  border: none;
}

.red {
  color: #f00;
}

.green {
  color: #008000;
}

.gray {
  color: #808080;
}

.onethird {
  width: 33vw;
}

tbody tr:nth-child(even) {
  background-color: #eee;
}

